* Update MX4J to version 3.0.2.
* Add ability to connect remote debugger - see: .ant-scripts/build-properties.xml -> remoteDebugJVMArgs
* Add new systemd service configuration - see: documentation/main/install.html
* Add support for inclusion of XML files using <xi:include href="something.xml" xpointer='element()'/>
* use jdom 2 (jdom.2.0.6) library. It fixes a problem with split CData (see e.g. https://github.com/hunterhacker/jdom/pull/124)
* configuration rework. The CC should now be able to start with (almost) empty launch.xml. There is a bit change in meaning of dist, proj, lib and home config options. See the related commit message for details

build loop
======================
* Fix error in Builder.getBuildOutputConsumer() when live output is enabled and the project name contained a slash.
* StreamPumper changed to work with both text and binary data (CC-991). Patch by Daniel Tihelka.
* Fix FileResolver/ResolverUser to detect and re-read changed property files (CC-1043). Patch by Daniel Tihelka. 
* Configure environment variables in Builder (currently Ant, Maven2, and Exec) configuration (CC-1026). Patch by Daniel Tihelka.

Plugin
----------------------
* Adds from="" attribute simplifying the pre-configuration of plugins for the default CC tags
* Adds inherits="" attribute allowing to create simple hierarchical structure of plugins configuration

WriterBuilder
----------------------
* New builder which can write mesages to a file added. Written by Tomas Ausberger + Daniel Tihelka
  It is similar to ent's echo task, but it can be used in projects which do not rely on ant

PipedExecBuilder
----------------------
* Fix memory usage and logging volume issues with PipedExecBuilder (CC-991). Patch by Daniel Tihelka.
* Add support for gzipstdout and binarystdout to PipedExecBuilder (CC-991). Patch by Daniel Tihelka.
* Add repipe="" and disable="" attributes to allow change plugin-preconfigured pipes